# bootcamps_study

./: README.md  pyproject.toml
01_bootcamp_python/001aula/: git.md
01_bootcamp_python/001aula/projeto_django/: pyproject.toml
01_bootcamp_python/001aula/projeto_testepy/: pyproject.toml  teste.py
01_bootcamp_python/002aula/: exercicios.py
01_bootcamp_python/004aula/: exemplo.py  exercicios.py
01_bootcamp_python/005aula/: aula05.md
01_bootcamp_python/006aula/: main.py
01_bootcamp_python/007aula/: etl.py  exercicios.py  main.py
01_bootcamp_python/008aula/: etl.py  pipeline.py
01_bootcamp_python/009aula/: decorator_singleton.py  decorator_tenacity.py  exemplo00.py  exemplo01.py  logging_exemplo_errors.py
01_bootcamp_python/009aula/utils/: utils_timer.py
01_bootcamp_python/010aula/: class.py
01_bootcamp_python/012aula/: csv_class.py  csv_test.py  usar_class.py
01_bootcamp_python/013_14aula/src/: __main__.py
01_bootcamp_python/015aula/FakeApi/data/: products.csv
01_bootcamp_python/016aula/: biblioteca.db
01_bootcamp_python/017aula/: desafio.db  desafio.py  desafio_query.py  exemplo_03.py  exemplo_04.py
01_bootcamp_python/018aula/: exemplo_00.py  exemplo_01.py
01_bootcamp_python/018aula/src/: models.py  pokemon.db
01_bootcamp_python/019aula/src/: app.py  schema.py  test.db
