[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Jownao <johnnywsevero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.4.2"
pandas = "^2.2.2"
pandera = "^0.20.3"
pyarrow = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
